# project-ilya-mahrooghi

./: CMakeLists.txt  README.md
files/: leaderboard.txt
files/game/: ilya.txt
files/map/: color0.txt  color1.txt  color2.txt  color3.txt  color4.txt  ilya.txt
include/: general.h  map.h  mixture.h  myheader.h  poison.h  soldiers.h
include/AI/: AI.h
include/endofgame/: endgame.h
include/game/: map.h  mixture.h  potion.h  soldiers.h
include/menu/: choosemap.h  gamesetting.h  leaderboard.h  menu.h  resume.h
photo/game/jpgs/: fire.psd  more.psd  random_map.psd  waves.psd
src/: AI.c  choosemap.c  endgame.c  gamesetting.c  general.c  leaderboard.c  main.c  map.c  menu.c  potion.c  resume.c  soldiers.c
